# TLDR-Conf

./: .gitignore  README.md  TEAM_DEPLOYMENT_GUIDE.md  graph_rag_analysis_748_v2.py
.claude/skills/paper-pipeline/: SKILL.md  cli.py  pyproject.toml
.claude/skills/paper-pipeline/src/paper_pipeline/: __init__.py  discovery.py  fetcher.py
.omc/plans/: community-merging-v2.md  community-merging.md
collaborations/: KRIBB_infectious_disease_center_report.html  KRIBB_infectious_disease_center_report.md  KRIBB_infectious_disease_center_report_EN.html  KRIBB_infectious_disease_center_report_EN.md  song_hyunsub_UNL_report_EN.md  song_hyunsub_UNL_report_KR.md
collaborations/omphalos-lifesciences/: research_report_2025-12-15.md  research_report_2025-12-15_EN.md
collaborations/researchers/: Daehwan_Kim_profile_2025-12-23.md
conferences/: README.md  UPGRADE_PLAN_v3.0.md
conferences/IAMRT2025/: README.md
conferences/MSK2025/: README.md
conferences/_template/: README.md
data/papers/: index.json
deployment/: README.md  create_deployment_package.sh
docs/: AI_ML_manual_curation.md
outputs/guides/: COMPLETE_conference_materials_index.md  LAB_SHARING_comprehensive_guide.md  NOTION_IMPORT_GUIDE.md  NOTION_POSTER_GUIDE.md  NOTION_all_sessions_guide.md  (+6 more)
raw/: symposia.md  time_table.md
scripts/: classify_posters_mece.py  classify_posters_mece_v2.py  generate_notion_csv.py  improved_parser.py  improved_parser_v2.py
speaker_profiles/: PROVOCATIVE_QUESTIONS_verbalized_sampling.md  Ugur_SEZERMAN_RECENT_RESEARCH_2023-2025.md  Ugur_SEZERMAN_comprehensive_profile.md
(+1096 files in other folders)
